{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 142,
  "lineage": "c9f31e09-e44d-fe56-00d5-0c7b5f425547",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172073986976:internet-gateway/igw-095b95be6687d5d82",
            "id": "igw-095b95be6687d5d82",
            "owner_id": "172073986976",
            "tags": {
              "Name": "mitya-gw"
            },
            "tags_all": {
              "Name": "mitya-gw"
            },
            "vpc_id": "vpc-015b2b2fba4cb4fa6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mintemir",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:172073986976:loadbalancer/app/mintemir-lb/bea21209d548f4d2",
            "arn_suffix": "app/mintemir-lb/bea21209d548f4d2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mintemir-lb-517803877.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:172073986976:loadbalancer/app/mintemir-lb/bea21209d548f4d2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mintemir-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00607b1b09107456e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0305f40b7b5daf2b5"
              },
              {
                "subnet_id": "subnet-05ee5c972025fbc1a"
              },
              {
                "subnet_id": "subnet-07e2ee2a5eb3bab69"
              }
            ],
            "subnets": [
              "subnet-0305f40b7b5daf2b5",
              "subnet-05ee5c972025fbc1a",
              "subnet-07e2ee2a5eb3bab69"
            ],
            "vpc_id": "vpc-015b2b2fba4cb4fa6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.r-security",
            "aws_subnet.mintemir",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:172073986976:listener/app/mintemir-lb/bea21209d548f4d2/e75fabab79998227",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:172073986976:targetgroup/tf-example-lb-tg/035d50624b32ea6e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:172073986976:listener/app/mintemir-lb/bea21209d548f4d2/e75fabab79998227",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:172073986976:loadbalancer/app/mintemir-lb/bea21209d548f4d2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mintemir",
            "aws_lb_target_group.target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:172073986976:targetgroup/tf-example-lb-tg/035d50624b32ea6e",
            "arn_suffix": "targetgroup/tf-example-lb-tg/035d50624b32ea6e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:172073986976:targetgroup/tf-example-lb-tg/035d50624b32ea6e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-015b2b2fba4cb4fa6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172073986976:route-table/rtb-07311564ffd149831",
            "id": "rtb-07311564ffd149831",
            "owner_id": "172073986976",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095b95be6687d5d82",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mitya-route0"
            },
            "tags_all": {
              "Name": "mitya-route0"
            },
            "timeouts": null,
            "vpc_id": "vpc-015b2b2fba4cb4fa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172073986976:route-table/rtb-0585f72c542db3122",
            "id": "rtb-0585f72c542db3122",
            "owner_id": "172073986976",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095b95be6687d5d82",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mitya-route1"
            },
            "tags_all": {
              "Name": "mitya-route1"
            },
            "timeouts": null,
            "vpc_id": "vpc-015b2b2fba4cb4fa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172073986976:route-table/rtb-09d4a9ecbe31198f6",
            "id": "rtb-09d4a9ecbe31198f6",
            "owner_id": "172073986976",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095b95be6687d5d82",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mitya-route2"
            },
            "tags_all": {
              "Name": "mitya-route2"
            },
            "timeouts": null,
            "vpc_id": "vpc-015b2b2fba4cb4fa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072ecb9d0e368b1e7",
            "route_table_id": "rtb-07311564ffd149831",
            "subnet_id": "subnet-05ee5c972025fbc1a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route",
            "aws_subnet.mintemir",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e3aa0b8daf5e8a6",
            "route_table_id": "rtb-0585f72c542db3122",
            "subnet_id": "subnet-07e2ee2a5eb3bab69"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route",
            "aws_subnet.mintemir",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083b988534f1e1fbe",
            "route_table_id": "rtb-09d4a9ecbe31198f6",
            "subnet_id": "subnet-0305f40b7b5daf2b5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route",
            "aws_subnet.mintemir",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "r-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172073986976:security-group/sg-00607b1b09107456e",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00607b1b09107456e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "r-security",
            "name_prefix": "",
            "owner_id": "172073986976",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015b2b2fba4cb4fa6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mintemir",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172073986976:subnet/subnet-05ee5c972025fbc1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ee5c972025fbc1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172073986976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mitya0"
            },
            "tags_all": {
              "Name": "mitya0"
            },
            "vpc_id": "vpc-015b2b2fba4cb4fa6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172073986976:subnet/subnet-07e2ee2a5eb3bab69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e2ee2a5eb3bab69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172073986976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mitya1"
            },
            "tags_all": {
              "Name": "mitya1"
            },
            "vpc_id": "vpc-015b2b2fba4cb4fa6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172073986976:subnet/subnet-0305f40b7b5daf2b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0305f40b7b5daf2b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "172073986976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mitya2"
            },
            "tags_all": {
              "Name": "mitya2"
            },
            "vpc_id": "vpc-015b2b2fba4cb4fa6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:172073986976:vpc/vpc-015b2b2fba4cb4fa6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-099ff894cbe860ce1",
            "default_route_table_id": "rtb-00aa5d14d5ae1e558",
            "default_security_group_id": "sg-016d291eb7a6376af",
            "dhcp_options_id": "dopt-0e9f55122e7aa1c58",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015b2b2fba4cb4fa6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00aa5d14d5ae1e558",
            "owner_id": "172073986976",
            "tags": {
              "Name": "vpc-roza"
            },
            "tags_all": {
              "Name": "vpc-roza"
            }
          }
        }
      ]
    }
  ]
}